fix loading svg being too big

--- a/css/all.css
+++ b/css/all.css
@@ -592,9 +592,6 @@ abbr[title] {
 		color: #fff;
 		font-size: 36px;
 	}
-	.links-container img {
-		width: 300px !important;
-	}
 }/* UTILITIES */
 * {
 	margin: 0;
