--- a/css/mobile.css
+++ b/css/mobile.css
@@ -135,7 +135,4 @@
 		color: #fff;
 		font-size: 36px;
 	}
-	.links-container img {
-		width: 300px !important;
-	}
 }
